--- a/newGuo/contact.html
+++ b/newGuo/contact.html
@@ -4,7 +4,7 @@
     <title>联系我们</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="联系我们">
-    <meta name="description" content="联系国馆">
+    <meta name="description" content="联系我们">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -157,7 +157,7 @@
         </div>
         <div class="order-money">
             <p>
-                公司地址：广东省，广州市，天河区，珠江新城花城大道13号建滔广场6楼&nbsp;整层
+                公司地址：广东省，广州市，天河区，珠江新城花城大道18号建滔广场6楼&nbsp;整层
             </p>
             <p>
                 前台电话：020-85289600
@@ -169,10 +169,10 @@
             <ul>
                 <li>线上合作</li>
                 <li style="font-size: 12px; margin-bottom: 10px;">
-                    <a href="#">媒体</a>/
-                    <a href="#">商务</a>/
-                    <a href="#">品牌</a>/
-                    <a href="#">联合营销</a>
+                    媒体/
+                    商务/
+                    品牌/
+                    联合营销
                 </li>
                 <li>
                     联系人：毛义明
@@ -190,8 +190,8 @@
             <ul>
                 <li>线下合作</li>
                 <li style="font-size: 12px; margin-bottom: 10px;">
-                    <a href="#">渠道</a>/
-                    <a href="#">活动</a>
+                    渠道/
+                    活动
                 </li>
                 <li>
                     联系人：姚晓群
@@ -209,9 +209,9 @@
             <ul>
                 <li>售后客服</li>
                 <li style="font-size: 12px; margin-bottom: 10px;">
-                    <a href="#">维权</a>/
-                    <a href="#">咨询</a>/
-                    <a href="#">退货</a>
+                    维权/
+                    咨询/
+                    退货
                 </li>
                 <li>
                     电话：400-900-5000
@@ -227,8 +227,8 @@
             <ul >
                 <li>加入国馆</li>
                 <li style="font-size: 12px; margin-bottom: 10px;">
-                    <a href="#">投递简历</a>/
-                    <a href="#">职位咨询</a>
+                    投递简历/
+                    职位咨询
                 </li>
                 <li>
                     邮箱：hr@guoguan.com
@@ -237,8 +237,8 @@
             <ul>
                 <li>意见反馈</li>
                 <li style="font-size: 12px; margin-bottom: 10px;">
-                    <a href="#">投诉</a>/
-                    <a href="#">建议</a>
+                    投诉/
+                    建议
                 </li>
                 <li>
                     邮箱：zixun@guoguan.com
