--- a/newGuo/deliver-method.html
+++ b/newGuo/deliver-method.html
@@ -115,6 +115,30 @@
 
 <!--content-->
 <div class="container">
+    <div class="left-nav">
+        <ul>
+            <li style="background-color: #ccc;margin:0;">
+                <a href="#">
+                    帮助中心
+                </a>
+            </li>
+            <li style="border-top: none;">
+                <a href="#">
+                    购买指南
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    支付方式
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-selected">
+                    配送方式
+                </a>
+            </li>
+        </ul>
+    </div>
     <div class="my-cart">
         <h1>配送方式</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
