--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -120,17 +120,7 @@
             <ul id="slide" style="">
                 <li style='display:block;'>
                     <div class="index-banner-1" onclick="window.open('http://baidu.com')">
-                        <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position" style="width: 200px; height: 45px;">立即购买</a>
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-2" onclick="window.open('http://baidu.com')">
-                        <a href="#" class="btn btn-red purchase-button-position" style="width: 200px; height: 45px;margin-left: 5px;position: absolute;right: 330px;bottom: 49px;">立即购买</a>
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-3" onclick="window.open('http://baidu.com')">
-                        <a href="#" class="btn btn-red purchase-button-position" style="width: 200px; height: 45px;position: absolute;right: 330px;bottom: 49px;">立即购买</a>
+                        <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position" style="line-height:45px; width: 200px; height: 45px;">立即购买</a>
                     </div>
                 </li>
             </ul>
@@ -186,7 +176,7 @@
             <div class="model-one-left" onclick="window.open('zhongguodao.html')">
                 <div class="detail">
                     <div class="title">国馆中国道</div>
-                    <div class="text">这一次,人们重新定义白酒</div>
+                    <div class="text">这一次,我们重新定义白酒</div>
                     <div class="link">
                         <a href="#" style="color: #fff;">
                             详细了解<i class="icon-angle-right"></i>
@@ -205,7 +195,7 @@
                                 </div>
                                 <div class="detail">
                                     <span>
-                                        国馆中国道，史上最惊艳的中国风
+                                        史上最惊艳的中国风
                                     </span>
                                 </div>
                             </div>
@@ -219,24 +209,24 @@
                 <div class="model-little-two model-little" onclick="window.open('zhongguodao.html#tabs1-five')">
                     <div class="model-bottom">
                         <div class="left">
-                            <div class="title"><span>跨界之作</span></div>
-                            <div class="detail"><span>艺术大师李正天与国内顶尖设计团队的跨界合作</span></div>
+                            <div class="title"><span>大师跨界之作</span></div>
+                            <div class="detail"><span>艺术大师李正天与酿酒大师李家顺的协力创作</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="model-little-three model-little">
                     <div class="model-bottom">
                         <div class="left">
-                            <div class="title"><span>顶级酒品</span></div>
-                            <div class="detail"><span>酿酒大师李家顺亲自调酒，明清老窖池酿造</span></div>
+                            <div class="title"><span>中国道的哲学</span></div>
+                            <div class="detail"><span>”天“”地“”商“”业“，千年哲学，藏于一套</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="model-little-four model-little" onclick="window.open('zhongguodao.html#tabs1-seven')">
                     <div class="model-bottom">
                         <div class="left">
-                            <div class="title"><span>规格参数</span></div>
-                            <div class="detail"><span>国馆中国道一套两支卷轴，四瓶酒，每瓶500ml</span></div>
+                            <div class="title"><span>顶级酒品</span></div>
+                            <div class="detail"><span>真正的酒后无酒，明清老窖池酿造</span></div>
                         </div>
                     </div>
                 </div>
