--- a/newGuo/job.html
+++ b/newGuo/job.html
@@ -5,6 +5,12 @@
     <meta name="viewport" charset="utf-8" content="width=1024">
     <meta name="keywords" content="加入我们">
     <meta name="description" content="加入我们">
+    <link href="<{$tplpub}>img/icon/144x144@2x.png" sizes="144x144" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/114x114@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/72x72@2x.png" sizes="72x72" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/favicon.png" rel="shortcut icon">
+
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -163,43 +169,43 @@
 
         <div style="border-bottom: 1px solid #f8f8f8; margin-top: 50px;"></div>
         <div class="join-bottom">
-                <div class="join-model">
+                <div class="join-model" style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-one','_self')">
                     <div class="join-model-bottom">
                         <span>产品设计师（PD）</span>
                     </div>
                 </div>
-                <div class="join-model-two">
+                <div class="join-model-two"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-three','_self')">
                     <div class="join-model-bottom">
                         <span>前端工程师</span>
                     </div>
                 </div>
-                <div class="join-model-two">
+                <div class="join-model-two"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-four','_self')">
                     <div class="join-model-bottom">
                         <span>编辑</span>
                     </div>
                 </div>
-                <div class="join-model-two">
+                <div class="join-model-two nimalegebide"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-five','_self')">
                     <div class="join-model-bottom">
                         <span>运营</span>
                     </div>
                 </div>
 
-                <div class="join-model" style="margin-top: 10px">
+                <div class="join-model" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat"  onclick="window.open('#part-two','_self')">
                     <div class="join-model-bottom">
                         <span>美术编辑</span>
                     </div>
                 </div>
-                <div class="join-model-two" style="margin-top: 10px">
+                <div class="join-model-two" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-six','_self')">
                     <div class="join-model-bottom">
                         <span>商务</span>
                     </div>
                 </div>
-                <div class="join-model-two" style="margin-top: 10px">
+                <div class="join-model-two cha" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-seven','_self')">
                     <div class="join-model-bottom">
                         <span>客服</span>
                     </div>
                 </div>
-                <div class="join-model-two" style="margin-top: 10px">
+                <div class="join-model-two" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-eight','_self')">
                     <div class="join-model-bottom">
                         <span>国馆电台主播</span>
                     </div>
