--- a/newGuo/kownus.html
+++ b/newGuo/kownus.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>支付方式</title>
+    <title>了解我们</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="支付方式">
-    <meta name="description" content="支付方式">
+    <meta name="keywords" content="了解我们">
+    <meta name="description" content="了解我们">
+    <link href="<{$tplpub}>img/icon/144x144@2x.png" sizes="144x144" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/114x114@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/72x72@2x.png" sizes="72x72" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/favicon.png" rel="shortcut icon">
+
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -117,53 +123,48 @@
 <div class="container">
     <div class="left-nav">
         <ul>
-            <li style="background-color: #ccc;margin:0;">
-                <a href="#">
-                    帮助中心
-                </a>
-            </li>
-            <li style="border-top: none;">
-                <a href="#">
-                    购买指南
-                </a>
-            </li>
             <li>
                 <a href="#" class="nav-selected">
-                    支付方式
+                了解我们
                 </a>
             </li>
             <li>
                 <a href="#">
-                    配送方式
+                联系我们
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                加入我们
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                媒体新闻
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                团队故事
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                相册视频
                 </a>
             </li>
         </ul>
     </div>
-
     <div class="my-cart">
-        <h1>支付方式</h1>
+        <h1>了解我们</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
-        <p style="margin-top: 20px;">
-            国馆提供支付宝、财付通等第三方平台支付。暂时不支持货到付款，请馆友购买时留意，避免影响正常购买。
-        </p>
-        <p>
-            支付宝在线支付支持账户支付和二维码支付两种方式。通过支付宝网银支付或快捷支付还可以直接使用银行账户付款。因银行卡在线支付有额度限制，如在支付中遇到问题请联系支付宝和开卡行客服。
-        </p>
-
-        <p>
-            <img src="global/images/0001.jpg" style="width: 550px;">
-        </p>
-        <p style="margin-top: 30px;">
-            <span>可使用网银支付的合作银行：</span><br>
-            <img src="global/images/0002.jpg" style="width: 550px;">
-        </p>
-        <p style="margin-top: 30px;">
-            <span>可使用快捷支付的合作银行：</span><br>
-            <img src="global/images/0003.jpg" style="width: 550px;">
-            <img src="global/images/0004.jpg" style="width: 550px;">
+        <div>
+            <img src="about/images/knowus.jpg" style="width: 100%; margin-top: 20px;">
+        </div>
+        <p style="margin-top: 30px; margin-bottom: 30px;">
+            国馆，全称为广东国馆酒业有限公司。国馆致力于中华五千年文化、尤其是酒文化的研究和探索，通过白酒与艺术跨界结合的方式，重新发掘传统文化的精髓，让更多的人领略中国传统之美，让美酒成为中国文化最温暖的表达方式。近年来，国馆联合中国酿酒大师与各界艺术家，在国内发起一场“酒以载道”的酒文化运动——以白酒为载体，以艺术为视角，开辟了“中国收藏级文化白酒”的新领域。
         </p>
     </div>
-
 </div>
 <!--content end-->
 
