--- a/newGuo/purchase-guide.html
+++ b/newGuo/purchase-guide.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>支付方式</title>
+    <title>购买指南</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="支付方式">
-    <meta name="description" content="支付方式">
+    <meta name="keywords" content="购买指南">
+    <meta name="description" content="购买指南">
+    <link href="<{$tplpub}>img/icon/144x144@2x.png" sizes="144x144" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/114x114@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/72x72@2x.png" sizes="72x72" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
+    <link href="<{$tplpub}>img/icon/favicon.png" rel="shortcut icon">
+
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -123,12 +129,12 @@
                 </a>
             </li>
             <li style="border-top: none;">
-                <a href="#">
+                <a href="#" class="nav-selected">
                     购买指南
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-selected">
+                <a href="#">
                     支付方式
                 </a>
             </li>
@@ -139,28 +145,110 @@
             </li>
         </ul>
     </div>
-
     <div class="my-cart">
-        <h1>支付方式</h1>
+        <h1>购买指南</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
         <p style="margin-top: 20px;">
-            国馆提供支付宝、财付通等第三方平台支付。暂时不支持货到付款，请馆友购买时留意，避免影响正常购买。
+            国馆购物流程：1.新用户注册  2.挑选商品  3.确认下单  4.订单跟踪  5.验货签收
         </p>
         <p>
-            支付宝在线支付支持账户支付和二维码支付两种方式。通过支付宝网银支付或快捷支付还可以直接使用银行账户付款。因银行卡在线支付有额度限制，如在支付中遇到问题请联系支付宝和开卡行客服。
+            需要购买“首款收藏级白酒——国馆•中国道”的馆友们，首先你需要在国馆官网上注册帐号。如果你已经拥有国馆账户请直接登录，略过本部分内容。
+        </p>
+        <p style="font-weight: bold;">1、新用户注册：
+        </p>
+        <p>
+            登录国馆官网（www.guoguan.com）。<br>
+            点击此网页右上方“注册”按钮，并根据页面引导完成注册；<br><br>
+            第一步 进入国馆官网，点击右上方“注册”按钮进行注册。
+
+        </p>
+        <p>
+            <img src="about/images/1.png" style="width: 704px;">
+        </p>
+        <p>
+            第二步 进入注册页面，根据相关的提示内容填写注册信息，当前开放的注册方式为手机号注册。
+        </p>
+        <p>
+            <img src="about/images/2.png" style="width: 481px;">
+        </p>
+        <p>
+            第三步 正确输入手机号后点击获取验证码。收到验证短信后输入验证码。
+        </p>
+        <p>
+            第四步 正确设置登录密码并点击“立即注册”按钮，账号注册完成。<br>
+            注册成功后挑选心仪的商品
         </p>
 
+        <p style="font-weight: bold;">2、挑选商品：
+        </p>
         <p>
-            <img src="global/images/0001.jpg" style="width: 550px;">
+            点击导航栏中的“国馆•中国道”或点击广告图进入“国馆•中国道”页面。现阶段“国馆•中国道”为国馆提供的唯一一款商品。馆友点击“加入购物车”按钮完成选购。<br><br>
+            第一步 通过导航栏或广告进入“国馆•中国道”页面。
+
         </p>
-        <p style="margin-top: 30px;">
-            <span>可使用网银支付的合作银行：</span><br>
-            <img src="global/images/0002.jpg" style="width: 550px;">
+        <p>
+            <img src="about/images/3.png" style="width: 800px;">
         </p>
-        <p style="margin-top: 30px;">
-            <span>可使用快捷支付的合作银行：</span><br>
-            <img src="global/images/0003.jpg" style="width: 550px;">
-            <img src="global/images/0004.jpg" style="width: 550px;">
+        <p>第二步 欲购买“国馆•中国道”，点击“加入购物车”按钮，进入购物车页面。</p>
+        <p>
+            <img src="about/images/4.png" style="width: 775px;">
+        </p>
+        <p>挑选完产品后，结算确认下单确认下单</p>
+        <p style="font-weight: bold;">3、确认下单：
+        </p>
+        <p>
+            挑选商品后，点击“去结账”按钮进入确认下单环节。 此时需要你填写收货人地址等信息。订单提交后无法修改，请您慎重填写。<br><br>
+            第一步 在购物车中确认商品的数量及金额等信息无误后，点击“去结算”进行结算。
+
+        </p>
+        <p>
+            <img src="about/images/5.png" style="width:800px;">
+        </p>
+        <p>
+            第二步 按提示填写详细的收货人地址、支付方式、送货时间等相关信息。老用户可直接选择一个已有地址作为收货地址。
+        </p>
+        <p>
+            <img src="about/images/6.png" style="width: 617px;">
+        </p>
+        <p>
+            确定后请点击“立即下单”按钮。我们提供支付宝支付方式，支付宝支付可使用支付宝、余额宝账户资金支付，也可以通过支付宝快捷支付使用银行卡支付。因银行卡在线支付有额度限制，如在支付中遇到问题请联系支付宝和开卡行客服。
+        </p>
+        <p>
+            <img src="about/images/7.png" style="width: 800px">
+        </p>
+        <p>
+            第三步 在线支付环节，请进入支付平台完成支付。
+        </p>
+        <p>
+            订单成功后，进入订单跟踪
+        </p>
+        <p style="font-weight: bold;">4、订单跟踪：
+        </p>
+        <p>
+            生成订单后，您可随时登录国馆官网。登录后点击“我的订单”按钮，跟踪查看订单进展情况。<br><br>
+            第一步 登录国馆官网，点击“我的订单”。
+
+        </p>
+        <p>
+            <img src="about/images/8.png" style="width: 787px;">
+        </p>
+        <p>
+            第二步 在订单列表中查看订单详情。
+        </p>
+        <p>
+            <img src="about/images/9.png" style="width: 987px;">
+        </p>
+        <p>
+            第三步 未付款的订单点击“立即支付”可跳转到订单页面进行付款。
+        </p>
+        <p>
+            签收须知<br>
+            为保障大家的切身利益，我们在此提醒您，收到商品时需要注意以下各项：<br>
+            1．下单时，请尽量留下本人能够签收的地址与联系电话。<br>
+            2．收到商品时请当场验货，检查外包装是否完好，商品数量是否与订单明细相符。签收后可要求投递员在场共同检验包装内商品是否齐全或破损。<br>
+            3．在本人不能亲自签收的情况下，请委托他人签收并严格按照第二项内容操作。<br>
+            4．如签收后商品出现质量问题，如瓶子破损或漏液，请您及时联系国馆客服中心400-900-5000。
+
         </p>
     </div>
 
