--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -50,7 +50,7 @@
         <li class='tab'><a href="#tabs1-four">文化</a></li>
         <li class='tab'><a href="#tabs1-five">艺术</a></li>
         <li class='tab'><a href="#tabs1-six">收藏</a></li>
-        <li class='tab'><a href="#tabs1-seven">拆开步骤</a></li>
+        <li class='tab'><a href="#tabs1-seven">规格</a></li>
     </ul>
     <div class='panel-container'>
         <div id="tabs1-one" style="background-color: #fff">
@@ -94,49 +94,189 @@
                 <img class="lazy" src="images/grey.gif" data-original="images/11_10.jpg" style="width: 100%">
                 <noscript><img src="images/11_10.jpg" style="width: 100%"></noscript>
             </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-two','_self')">
+                下一步
+            </div>
         </div>
 
         <div id="tabs1-two">
-            <div class="product-data-one">
-                <img src="images/1-01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_01.jpg" style="width: 100%">
+                <noscript><img src="images/12_01.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-data-two">
-                <img src="images/11_01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_02.jpg" style="width: 100%">
+                <noscript><img src="images/12_02.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-data-three">
-                <img src="images/mitv-cond-02.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_03.jpg" style="width: 100%">
+                <noscript><img src="images/12_03.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-data-four">
-                <img src="images/mitv-conf-01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_04.jpg" style="width: 100%">
+                <noscript><img src="images/12_04.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_05.jpg" style="width: 100%">
+                <noscript><img src="images/12_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_06.jpg" style="width: 100%">
+                <noscript><img src="images/12_06.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/12_07.jpg" style="width: 100%">
+                <noscript><img src="images/12_07.jpg" style="width: 100%"></noscript>
+            </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-three','_self')">
+                下一步
             </div>
         </div>
 
         <div id="tabs1-three">
-            <div class="product-story-one">
-                <img src="images/1-01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_01.jpg" style="width: 100%">
+                <noscript><img src="images/13_01.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-story-two">
-                <img src="images/11_01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_02.jpg" style="width: 100%">
+                <noscript><img src="images/13_02.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-story-three">
-                <img src="images/mitv-cond-02.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_03.jpg" style="width: 100%">
+                <noscript><img src="images/13_03.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-story-four">
-                <img src="images/mitv-conf-01.jpg" style="width: 100%">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_04.jpg" style="width: 100%">
+                <noscript><img src="images/13_04.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_05.jpg" style="width: 100%">
+                <noscript><img src="images/13_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_06.jpg" style="width: 100%">
+                <noscript><img src="images/13_06.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/13_07.jpg" style="width: 100%">
+                <noscript><img src="images/13_07.jpg" style="width: 100%"></noscript>
+            </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-four','_self')">
+                下一步
             </div>
         </div>
 
         <div id="tabs1-four">
-           made
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/14_01.jpg" style="width: 100%">
+                <noscript><img src="images/14_01.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/14_02.jpg" style="width: 100%">
+                <noscript><img src="images/14_02.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/14_03.jpg" style="width: 100%">
+                <noscript><img src="images/14_03.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/14_04.jpg" style="width: 100%">
+                <noscript><img src="images/14_04.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/14_05.jpg" style="width: 100%">
+                <noscript><img src="images/14_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-five','_self')">
+                下一步
+            </div>
+
         </div>
         <div id="tabs1-five">
-            made
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_01.jpg" style="width: 100%">
+                <noscript><img src="images/15_01.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_02.jpg" style="width: 100%">
+                <noscript><img src="images/15_02.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_03.jpg" style="width: 100%">
+                <noscript><img src="images/15_03.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_04.jpg" style="width: 100%">
+                <noscript><img src="images/15_04.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_05.jpg" style="width: 100%">
+                <noscript><img src="images/15_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/15_06.jpg" style="width: 100%">
+                <noscript><img src="images/15_06.jpg" style="width: 100%"></noscript>
+            </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-six','_self')">
+                下一步
+            </div>
+
         </div>
         <div id="tabs1-six">
-            made
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_01.jpg" style="width: 100%">
+                <noscript><img src="images/16_01.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_02.jpg" style="width: 100%">
+                <noscript><img src="images/16_02.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_03.jpg" style="width: 100%">
+                <noscript><img src="images/16_03.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_04.jpg" style="width: 100%">
+                <noscript><img src="images/16_04.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_05.jpg" style="width: 100%">
+                <noscript><img src="images/16_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_06.jpg" style="width: 100%">
+                <noscript><img src="images/16_06.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_07.jpg" style="width: 100%">
+                <noscript><img src="images/16_07.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/16_08.jpg" style="width: 100%">
+                <noscript><img src="images/16_08.jpg" style="width: 100%"></noscript>
+            </div>
+            <div style="background-color: #ccc; text-align: center; color: #333;height: 45px; line-height: 45px; cursor: pointer" class="go-top" onclick="window.open('#tabs1-seven','_self')">
+                下一步
+            </div>
         </div>
         <div id="tabs1-seven">
-            made
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/17_01.jpg" style="width: 100%">
+                <noscript><img src="images/17_01.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/17_02.jpg" style="width: 100%">
+                <noscript><img src="images/17_02.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/17_03.jpg" style="width: 100%">
+                <noscript><img src="images/17_03.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/17_04.jpg" style="width: 100%">
+                <noscript><img src="images/17_04.jpg" style="width: 100%"></noscript>
+            </div>
         </div>
     </div>
 </div>
@@ -182,6 +322,9 @@
 <script type="text/javascript">
     $(document).ready( function() {
         $('#tab-container').easytabs();
+        $(".go-top").on("click",function(){
+            scrollTo(0,0);
+        })
     });
 </script>
 </body>
