--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -928,10 +928,10 @@
 
 </body>
 <script src="global/scripts/lib/jquery-1.8.0.js" type="text/javascript"></script>
-<script src="global/scripts/lib/jquery.mnmenu.js" type="text/javascript"></script>
-<script src="global/scripts/lib/touchslider.js" type="text/javascript"></script>
-<script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
-<script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.js" type="text/javascript"></script>
+<script src="global/scripts/lib/jquery.mnmenu.min.js" type="text/javascript"></script>
+<script src="global/scripts/lib/touchslider.min.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.pack.min.js" type="text/javascript"></script>
+<script src="global/scripts/lib/fancybox/jquery.easing-1.3.pack.min.js" type="text/javascript"></script>
 <script src="global/scripts/lib/jquery.hashchange.min.js" type="text/javascript"></script>
 <script src="global/scripts/lib/jquery.easytabs.min.js" type="text/javascript"></script>
 
