--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 
     <!--样式表-->
-    <!--<link href="global/styles/base.css" type="text/css" rel="stylesheet">
+  <!--  <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
-    <!--<link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
     <link href="global/styles/default.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -124,7 +124,7 @@
             <ul id="slide" style="">
                 <li style='display:block;'>
                     <div class="index-banner-1" onclick="window.open('http://baidu.com')">
-                        <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position" style="line-height:45px; width: 200px; height: 45px;">立即购买</a>
+                        <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position index-purchase-button" style="">立即购买</a>
                     </div>
                 </li>
             </ul>
